Modify projects and contact

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Juliette Pretot",
-  "short_name": "Juliette Pretot",
+  "name": "please hire me",
+  "short_name": "Madeleine Chang",
   "theme_color": "#101823",
   "background_color": "#101823",
   "display": "standalone",
