Change title in html.tsx

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "please hire me",
+  "name": "Madeleine Chang",
   "short_name": "Madeleine Chang",
   "theme_color": "#101823",
   "background_color": "#101823",
