--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "madeleine.ch",
-  "description": "madeleine.ch  ",
+  "name": "madchang.com",
+  "description": "madchang.com",
   "version": "0.1.0",
   "author": "Madeleine Chang",
   "dependencies": {
